  includes 'ja'.
- [BUG FIX] Fix the behavior of 'maxrecords' key for pagination (Thanks to Kazuaki Osawa).
- [BUG FIX] Fix the behavior of 'maxrecords' key for Master/Detail style page.
- [BUG FIX] Fix displaying the navigation bar when using the master-detail style UI.
- [BUG FIX] Fix compatibility with PHPExcel due to autoloading.
- [BUG FIX] Fix calculation for over-million numbers.

Ver.5.1 (May 22, 2015)
- Support uploading a file to FileMaker's container field when using FileMaker Server 13 or later.
- Improve the compatibility with file upload component and Mobile Safari.
- Add the sample application of uploading a file to FileMaker's container field in the 
  "Sample_webpage" directory and update the sample database (TestDB.fmp12).
- Calculated property can use the unbound fields as items in the expression. You don't need to set the target
  (like qty@style.color) in the "field" of "calculation", just set the field name.
- Update phpseclib to version 0.3.10.
- Change SHA-1 JavaScript library.
  (tiny-sha1 <https://code.google.com/p/tiny-sha1/> is contained in the INTER-Mediator.)
- Improve error handling in DB_FileMaker_FX class when loading FX.php.
- Avoid using the @-operator for error suppression in NotifyServer.php to reduce bug risk.
- Eliminate die() in INTER-Mediator.php to reduce bug risk.
- Remove duplication in MessageStrings_ja.php and modify MessageStrings.php.
- Add the 'memo' field in sample databases.
- The script to build the VM contains installation of samba and sharing the web root.
- Update Vagrantfile for the INTER-Mediator-Server virtual machine to use a box file 
  which be installed VirtualBox Guest Additions.
- Enable SMB in INTER-Mediator Server Virtual Machine.
- [BUG FIX] Fix loading DB_Null.php in some cases.
- [BUG FIX] The page editor title was "Definition File Editor" and correct it.
- [BUG FIX] The 'navi-control' behavior was sometimes wrong.